--- a/stylesheet.css
+++ b/stylesheet.css
@@ -90,6 +90,10 @@ p {
     text-align: center;
 }
 
+#visitorCounter {
+    width: 3.5%;
+}
+
 .section {
     margin: 0 auto;
     width: 80%;
@@ -100,6 +104,10 @@ p {
 
 .left {
     float: left;
+}
+
+.center {
+    margin: 0 auto;
 }
 
 .right {
@@ -114,6 +122,11 @@ p {
 
 .col-1-2 {
     width: 50%;
+    height: auto;
+}
+
+.col-1-3 {
+    width: 33.33%;
     height: auto;
 }
 
