--- a/stylesheet.css
+++ b/stylesheet.css
@@ -91,7 +91,7 @@ p {
 }
 
 #visitorCounter {
-    width: 3.5%;
+    width: 2.5%;
 }
 
 .section {
@@ -135,6 +135,28 @@ p {
     height: auto;
 }
 
+/*
+ *  Games
+ */
+
+ .gameCanvas {
+    background: #eee;
+    display: block;
+    margin: 0 auto;
+}
+
+#phaserGame {
+    margin-bottom: 40px;
+}
+
+ #phaserGame > canvas {
+    margin: 0 auto;
+  }
+
+  /*
+  *
+  */
+
 @media screen and (max-width:960px) {
     #navbar{
         width: 100%;
@@ -143,7 +165,20 @@ p {
     .col-1-2 {
         width: 100%;
     }
+    .col-1-3 {
+        width: 100%;
+    }
+    #visitorCounter {
+        visibility: hidden;
+    }
     #page-wrapper{
         width: 100%;
     }
+    #section3{
+        padding-left: 0
+    }
+}
+
+@media screen and (max-width:618px) {
+
 }
