--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,5 @@
-body, html {
+body,
+html {
     margin: 0 auto;
     padding: 0;
     background-color: white;
@@ -42,7 +43,7 @@ p {
     background-color: black;
 }
 
- a:hover {
+a:hover {
     background-color: #191919;
 }
 
@@ -66,7 +67,7 @@ p {
 
 #profilePic {
     width: 35%;
-    padding-right: 15px; 
+    padding-right: 15px;
 }
 
 .headerImg {
@@ -139,7 +140,7 @@ p {
  *  Games
  */
 
- .gameCanvas {
+.gameCanvas {
     background: #eee;
     display: block;
     margin: 0 auto;
@@ -149,36 +150,37 @@ p {
     margin-bottom: 40px;
 }
 
- #phaserGame > canvas {
+#phaserGame>canvas {
     margin: 0 auto;
-  }
+}
 
-  /*
+/*
   *
   */
 
 @media screen and (max-width:960px) {
-    #navbar{
+    #navbar {
         width: 100%;
         position: relative;
     }
+
     .col-1-2 {
         width: 100%;
     }
+
     .col-1-3 {
         width: 100%;
     }
+
     #visitorCounter {
         visibility: hidden;
     }
-    #page-wrapper{
+
+    #page-wrapper {
         width: 100%;
     }
-    #section3{
+
+    #section3 {
         padding-left: 0
     }
-}
-
-@media screen and (max-width:618px) {
-
 }
