--- a/stylesheet.css
+++ b/stylesheet.css
@@ -247,7 +247,7 @@ a:hover {
   *
   */
 
-@media screen and (max-width:960px) {
+@media screen and (max-width:1170px) {
     #navbar {
         width: 100%;
         position: relative;
@@ -271,5 +271,10 @@ a:hover {
 
     #section3 {
         padding-left: 0
+    }
+
+    #cvRightCol {
+        width: 100%;
+        margin-top: 25px;
     }
 }
